[package]
name = "modern-multiset"
version = "1.0.0"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
repository = "https://github.com/ISibboI/multiset"
description = "A hash multiset implementation."
keywords = ["multiset", "data-structure", "collection", "count", "hash"]
license = "GPL-3.0"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.216", optional = true, features = ["derive"] }
